feat: added pages and simple concept for them

--- a/Projekt01/index.html
+++ b/Projekt01/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles.css" />
-    <title>Document</title>
+    <title>POKEMON</title>
   </head>
   <body>
-    <header>
-      <nav id="navBar">
+    <header id="begining">
+      <nav>
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">About</a></li>
@@ -20,7 +20,7 @@
     <main>
       <menu>
         <ol>
-          <li><a id="fire" href="">Fire Type</a></li>
+          <li><a id="fire" href="pages/fire.html">Fire Type</a></li>
           <li><a id="water" href="">Water Type</a></li>
           <li><a id="grass" href="">Grass Type</a></li>
           <li><a id="electric" href="">Electric Type</a></li>
@@ -97,7 +97,7 @@
 
     <footer>
       <div id="buttonDiv">
-        <a style="color: white" href="#navBar"
+        <a style="color: white" href="#begining"
           ><button id="jumpTopButton">&uarr;</button>
         </a>
       </div>
