feat: added subPages

--- a/Projekt01/index.html
+++ b/Projekt01/index.html
@@ -21,11 +21,11 @@
       <menu>
         <ol>
           <li><a id="fire" href="pages/fire.html">Fire Type</a></li>
-          <li><a id="water" href="">Water Type</a></li>
-          <li><a id="grass" href="">Grass Type</a></li>
-          <li><a id="electric" href="">Electric Type</a></li>
-          <li><a id="ground" href="">Ground Type</a></li>
-          <li><a id="psychic" href="">Psychic Type</a></li>
+          <li><a id="water" href="pages/water.html">Water Type</a></li>
+          <li><a id="grass" href="pages/grass.html">Grass Type</a></li>
+          <li><a id="electric" href="pages/electric.html">Electric Type</a></li>
+          <li><a id="ground" href="pages/ground.html">Ground Type</a></li>
+          <li><a id="psychic" href="pages/psychic.html">Psychic Type</a></li>
         </ol>
       </menu>
 
