--- a/Projekt01/pages/fire.html
+++ b/Projekt01/pages/fire.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>FIRE POKEMON</title>
   </head>
   <body
@@ -15,13 +15,55 @@
       background-position: center;
     "
   >
-    <main>
-      <h1>Fire Type</h1>
-      <p>
-        Fire-type Pokémon are strong against Bug, Grass, Ice, and Steel-type
-        Pokémon, but are weak against Water, Rock, and Ground-type Pokémon.
-      </p>
-      <img src="../imgs/fire.jpg" alt="" />
+    <header>
+      <h1 style="color: red">Fire Type Pokémon</h1>
+      <nav>
+        <a href="../index.html">Back to Comparison Table</a>
+      </nav>
+    </header>
+    <main class="subPageMain">
+      <section>
+        <h2>Overview</h2>
+        <p>
+          Fire-type Pokémon are characterized by their fiery nature and their
+          ability to harness the power of flames. They often thrive in hot
+          environments and are known for their aggressive combat style, dealing
+          powerful damage to Grass, Bug, Ice, and Steel types.
+        </p>
+      </section>
+
+      <section>
+        <h2>Strengths and Weaknesses</h2>
+        <p>
+          <strong>Strengths:</strong> Fire-type Pokémon excel against Grass,
+          Bug, Ice, and Steel Pokémon, dealing double damage.
+        </p>
+        <p>
+          <strong>Weaknesses:</strong> They are vulnerable to Water, Rock, and
+          Ground types, taking double damage from their attacks.
+        </p>
+      </section>
+
+      <section>
+        <h2>Fun Facts</h2>
+        <ul>
+          <li>
+            The first Fire-type Pokémon introduced was Charmander, one of the
+            original starter Pokémon in Pokémon Red and Blue.
+          </li>
+          <li>
+            Fire-type moves often have a chance to burn the opponent, reducing
+            their attack power.
+          </li>
+          <li>
+            Legendary Pokémon such as Moltres and Ho-Oh belong to the Fire type.
+          </li>
+          <li>
+            Fire-type Pokémon are often associated with determination and
+            courage in Pokémon lore.
+          </li>
+        </ul>
+      </section>
     </main>
   </body>
 </html>
