--- a/Projekt01/index.html
+++ b/Projekt01/index.html
@@ -19,7 +19,7 @@
     </header>
     <main>
       <menu>
-        <ol>
+        <ol class="menu">
           <li><a id="fire" href="pages/fire.html">Fire Type</a></li>
           <li><a id="water" href="pages/water.html">Water Type</a></li>
           <li><a id="grass" href="pages/grass.html">Grass Type</a></li>
